# local-transcription

./: .gitignore  LICENSE  README.md  pyproject.toml  transcribe.py
