[project]
name = "transcription"
version = "0.1.0"
description = "A CLI tool to transcribe audio/video files using WhisperX with support for speaker diarization"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "python-dotenv>=1.2.1",
    "whisperx>=3.7.4",
]
